--- a/app/src/main/res/layout/calculator_layout.xml
+++ b/app/src/main/res/layout/calculator_layout.xml
@@ -15,11 +15,169 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/number"
         android:orientation="vertical"
         android:weightSum="5">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:weightSum="4">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_clear"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="C"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_parentheses"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="()"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_percent"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="%"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_divide"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="/"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:weightSum="4">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_7"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="7"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_8"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="8"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_9"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="9"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_multiply"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="*"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:weightSum="4">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_4"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="4"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_5"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="5"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_6"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="6"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_subtract"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="-"
+                android:gravity="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="4"
+            android:layout_weight="1">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="1"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:paddingTop="10dp"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="2"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:paddingTop="10dp"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="3"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:paddingTop="10dp"
+                android:gravity="center"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="+"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:paddingTop="10dp"
+                android:gravity="center"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,184 +187,31 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="C"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="()"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="%"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="/"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="4">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="7"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="8"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="9"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="*"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="4">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="4"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="5"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="6"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="-"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="4">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="1"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="2"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="3"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="+"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:paddingTop="10dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="4">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_height="match_parent"
                 android:text="0"
                 android:layout_weight="2"
                 android:textAlignment="center"
-                android:paddingTop="10dp"/>
+                android:paddingTop="10dp"
+                android:gravity="center"/>
 
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_height="match_parent"
                 android:text="."
                 android:layout_weight="1"
                 android:textAlignment="center"
-                android:paddingTop="10dp"/>
+                android:paddingTop="10dp"
+                android:gravity="center"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_height="match_parent"
                 android:text="="
                 android:layout_weight="1"
                 android:textAlignment="center"
-                android:paddingTop="10dp"/>
+                android:paddingTop="10dp"
+                android:gravity="center"/>
         </LinearLayout>
     </LinearLayout>
 
