--- a/app/src/main/res/layout/relative_layout.xml
+++ b/app/src/main/res/layout/relative_layout.xml
@@ -66,6 +66,7 @@
         android:weightSum="3">
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_like"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -76,6 +77,7 @@
             android:textAlignment="center" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_comment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -86,6 +88,7 @@
             android:textAlignment="center" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_share"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
